[tool.poetry]
name = "scrape-jiji"
version = "0.1.0"
description = ""
authors = ["blackprince001 <appiahboaduprince@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
